# agenteval

./: .env.example  .gitignore  Makefile  README.md  agents.yaml  promptfooconfig.yaml  pyproject.toml  report_uc1.html  start.bat
.github/workflows/: promptfoo.yml
agenteval_ovb/: __init__.py  agents_config.py  branding.py  pricing.py  promptfoo_utils.py  report.py  scorecard.py
docs/: eu_ai_act_mapping.yaml  security_taxonomy.yaml
evals/benchmark/: model_comparison.yaml
evals/compliance/: compliance_eval.yaml
evals/compliance/_generic/: compliance_tests.yaml
evals/compliance/usecases/uc1_suitability/: compliance_eval.yaml
evals/compliance/usecases/uc2_onboarding/: compliance_eval.yaml
evals/compliance/usecases/uc3_compliance_triage/: compliance_eval.yaml
evals/compliance/usecases/uc4_beratungsdoku/: compliance_eval.yaml
evals/functionality/: conftest.py  cost_tracker.py  functionality_costs_uc1_gpt-oss-free.json  requirements.txt  test_functionality.py
evals/functionality/agent/: graph.py  tools.py
evals/functionality/tasks/: ovb_tasks.yaml
evals/functionality/usecases/: registry.py
evals/functionality/usecases/uc0_generic/: prompt.py  tasks.yaml  tools.py
evals/security/: security_eval.yaml  security_eval_finance.yaml
evals/security/_generic/: security_tests.yaml
scripts/: compliance_scorecard.py  cost_report.js  generate_tests_from_injecagent.py  run_benchmark.js  run_promptfoo_multi_agent.py  run_smoke_test.py
webapp/: app.py  requirements.txt  test_smoke.py
webapp/.streamlit/: config.toml
(+16 files in other folders)
