[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agenteval-ovb"
version = "0.1.0"
description = "Reproduzierbares Evaluations- und Sicherheits-Framework für agentische KI-Systeme im regulierten Finanzumfeld (OVB × TU Darmstadt)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
keywords = ["llm", "agent", "evaluation", "security", "eu-ai-act", "promptfoo", "deepeval"]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langsmith>=0.1.0",
    "deepeval==3.9.9",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agenteval-scorecard = "agenteval_ovb.scorecard:main"
agenteval-report    = "agenteval_ovb.report:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agenteval_ovb*"]
